@@ -35,6 +35,7 @@ enable_debug:=@enable_debug@
 enable_optimization:=@enable_optimization@
 enable_warnings:=@enable_warnings@
 enable_fatal_warnings:=@enable_fatal_warnings@
+enable_unstable:=@enable_unstable@
 enable_rtti:=@enable_rtti@
 enable_exceptions:=@enable_exceptions@
 prefix:=@prefix@
