@@ -2,6 +2,7 @@
  *
  * XPLC - Cross-Platform Lightweight Components
  * Copyright (C) 2000-2001, Pierre Phaneuf
+ * Copyright (C) 2002, Net Integration Technologies, Inc.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public License
@@ -25,7 +26,7 @@
 #include <xplc/IObject.h>
 #include <xplc/IServiceHandler.h>
 
-class IServiceManager: public IObject {
+class IServiceManager: public IObject { UNSTABLE_INTERFACE
 public:
   static const UUID IID;
   virtual void addHandler(IServiceHandler*) = 0;
