@@ -1,6 +1,10 @@
 New in 0.1.3
 ------------
 
+ * Added a way to mark unstable interfaces as such, so that you cannot
+   accidentally use an unstable interface (there is a 'configure'
+   switch to allow unstable interfaces, and unstable releases of XPLC
+   have it enabled by default).
  * Added an "uninstall" make target.
  * Added a platform-independent dlopen/LoadLibrary abstraction.
  * Changed the simple dynamic loader so that it does not require a
